# audio

./: .gitignore  Dockerfile  Makefile  boot.sh  cloudbuild.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh
speech/: handler.py  schema.py  service.py
transcribe/: main.py
translations/: main.py
