[tool.poetry]
name = "Audio API"
version = "0.0.1"
description = "OpenAI compatible API for audio processing"
authors = ["Oscar Bahamonde <oscar.bahamonde@indiecloud.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
spacy = "*"
pydub = "*"
torch = "*"
torchaudio = "*"
openai = "*"
pytube = "*"
fastapi = {extras = ["all"], version = "*"}
uvicorn = {extras = ["standard"], version = "*"}
python-multipart = "*"
python-dotenv = "*"
yt-dlp = "*"
rdict = "*"

# Direct Git dependency for TTS
TTS = {git = "https://github.com/obahamonde/TTS-la.git"}
boto3 = "^1.35.63"
assemblyai = "^0.35.1"


[tool.poetry.group.dev.dependencies]
boto3-stubs = {extras = ["all"], version = "^1.35.63"}

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
